fix(fights): fix overflow

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -33,7 +33,3 @@
 .poke-title{
   margin-right: 24px;
 }
-
-.main {
-}
-
